--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ header div button:nth-child(3){
     font-size: 10px;
 }
 
-.delete-button{
+.delete-btn{
     background-color: orangered;
     border: none;
     padding: 5px 10px;
